--- a/client/package.json
+++ b/client/package.json
@@ -43,5 +43,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://localhost:5000/",
+  "devDependencies": {
+    "dotenv": "^16.0.3"
+  }
 }
